[tool.poetry]
name = "chatbot"
version = "1.0.0"
description = ""
authors = ["T145 <T145@protonmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
signalbot = "^0.10.1"
pysignalclirestapi = "^0.3.24"
python-dotenv = "^1.0.1"
langchain = "^0.3.4"
torch = {version = "^2.5.0+cu124", source = "pytorch"}
torchvision = {version = "^0.20.0+cu124", source = "pytorch"}
torchaudio = {version = "^2.5.0+cu124", source = "pytorch"}
#mingpt = {git = "https://github.com/karpathy/minGPT.git"}
accelerate = "^1.0.1"
arrow = "^1.3.0"
langchain-community = "^0.3.3"
fastembed = "^0.3.6"
asyncio = "^3.4.3"
ipython = "^8.28.0"
motor = "^3.6.0"
wikipedia = "^1.4.0"
typer = "^0.12.5"
langchain-ollama = "^0.2.0"
googlesearch-python = "^1.2.5"
langchain-weaviate = "^0.0.3"
weaviate-client = "^4.9.0"
jq = "^1.8.0"
tavily-python = "^0.5.0"
duckduckgo-search = "^6.3.2"

[tool.poetry.scripts]
chatbot = "chatbot.main:app"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
