[tool.poetry]
name = "chatbot"
version = "1.0.0"
description = ""
authors = ["T145 <T145@protonmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pysignalclirestapi = "^0.3.24"
python-dotenv = "^1.0.1"
langchain = "^0.3.4"
torch = {version = "^2.5.0+cu124", source = "pytorch"}
torchvision = {version = "^0.20.0+cu124", source = "pytorch"}
torchaudio = {version = "^2.5.0+cu124", source = "pytorch"}
#mingpt = {git = "https://github.com/karpathy/minGPT.git"}
accelerate = "^1.0.1"
arrow = "^1.3.0"
langchain-community = "^0.3.3"
fastembed = "^0.3.6"
asyncio = "^3.4.3"
motor = "^3.6.0"
typer = "^0.12.5"
langchain-ollama = "^0.2.0"
langchain-weaviate = "^0.0.3"
weaviate-client = "^4.9.0"
duckduckgo-search = "^6.3.2"
elevenlabs = "^1.11.0"

[tool.poetry.scripts]
chatbot = "chatbot.main:app"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
mypy = "^1.13.0"
pep8-naming = "^0.14.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.1"

[tool.black]
line-length = 132

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
ignore = ["E501", "E402"]
line-length = 132
select = ["E", "F", "W", "I", "B"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
